# KWCM_PTwardawa

src/: CMakeLists.txt  main.cpp
src/Trygonometria/: trygonometria.cpp  trygonometria.h
